--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,14 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/imdb_app
-spring.datasource.username=admin
-spring.datasource.password=123123
+#spring.datasource.url=jdbc:mysql://localhost:3306/imdb_app
+#spring.datasource.username=admin
+#spring.datasource.password=123123
 spring.jpa.hibernate.ddl-auto=update
 server.error.whitelabel.enabled=false
 spring.mvc.throw-exception-if-no-handler-found=true
 spring.web.resources.add-mappings=false
 
 
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
